turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:2: error: too many arguments for method maison: ()Unit
  maison(4)
        ^