turtleart.housemany.HouseMany.scala.code
override def run() {
  maison(4)
  leveCrayon()
  left(90)
  avance(200)
  droite(90)
  avance(75)
  baisseCrayon()
  maison()
  leveCrayon()
  avance(75)
  maison4()
  leveCrayon()
  recule(75)
  left(90)
  avance(50)
  droite(90)
  baisseCrayon()
  maison()
  leveCrayon()
  avance(150)
  left(90)
  avance(150)
  droite(90)
}

def maison4() {
  for(k <- 1 to 4){
    maison()
    leveCrayon()
    droite(90)
    avance(50)
    left(90)
    baisseCrayon()
  }
}

def maison() {
  for(i <- 1 to 4){
    avance(30)
    droite(90)
  }
  avance(30)
  droite(30)
  for(i <- 1 to 3){
    avance(30)
    droite(120)
  }
  left(30)
  recule(30)
}